added backgrounds to sub pages

--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
     </header>
 
     <main>
-        <section>
+        <section id="about">
             <div class="container">
                 <div class="row vertical-centered">
                     <div class="column one-half">
@@ -79,7 +79,7 @@
             </div>
         </section>
 
-        <section>
+        <section id="artist">
             <div class="container">
                 <div class="row swapped vertical-centered">
                     <div class="column one-half">
