updated home, about, and gallery pages

--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@
             <div class="container">
                 <div class="row vertical-centered">
                     <div class="column one-half">
-                        <img src="img/cards3.jpg" alt="Wood Print" width="1503" height="1000" />
+                        <img src="img/matte5.jpg" alt="Matted Print" width="1552" height="1200" />
                     </div>
 
                     <div class="column one-half">
