updated home and about pages

--- a/about.html
+++ b/about.html
@@ -97,6 +97,42 @@
         <section>
             <div class="container">
                 <h2 class="section-heading text-centered">AWARDS</h2>
+                <div class="awards">
+                    <h3>1994</h3>
+                    <p><b>FIRST PLACE</b> - 1994 Sew a Lei for Memorial Day Poster Contest</p>
+                    <p><b>BEST IN SHOW</b> - 2nd Annual Island Fresh Milk Art Contest</p>
+                    <p><b>FIRST PLACE</b> - International Year of the Family Poster Contest</p>
+                    <p><b>FIRST PLACE</b> - 1994 Hawaii Magazine Children’s Art Contest</p>  
+                    <p><b>HONORABLE MENTION</b> - 1994 Hawaii State Science &amp; Engineering Fair Poster &amp; Cover Contest</p>
+                </div>
+
+                <div class="awards">
+                    <h3>1995</h3>
+                    <p><b>SECOND PLACE</b> - 1995 Sew a Lei for Memorial Day Poster Contest</p>
+                    <p><b>SECOND PLACE</b> - 3rd Annual Island Fresh Milk Art Contest</p>
+                    <p><b>WINNER</b> - 1995 Hawaii Statewide Artwork Contest on Energy</p>
+                    <p><b>HONORABLE MENTION</b> - 1995 Hawaii State Science &amp; Engineering Fair Poster &amp; Cover Contest</p>  
+                    <p><b>THIRD PLACE</b> - 1st Annual Jingle Bags Contest</p>
+                </div>
+
+                <div class="awards">
+                    <h3>1996</h3>
+                    <p><b>HONORABLE MENTION</b> - 4th Annual Island Fresh Milk Art Contest</p>
+                    <p><b>HONORABLE MENTION</b> - Federal Junior Duck Stamp Design Contest</p>
+                    <p><b>THIRD PLACE</b> - 1996 Hawaii State Science &amp; Engineering Fair Poster &amp; Cover Contest</p>
+                </div>
+
+                <div class="awards">
+                    <h3>2021</h3>
+                    <p><b>BRONZE (ENTIRE BOOK DESIGN)</b> - 2021 Pele Awards (College)</p>
+                    <p><b>BRONZE (BOOK COVER SERIES)</b> - 2021 Pele Awards (College)</p>
+                </div>
+
+                <div class="awards">
+                    <h3>2022</h3>
+                    <p><b>BRONZE (BRAND IDENTITY)</b> - 2022 Pele Awards (College)</p>
+                    <p><b>BRONZE (BRAND STATIONERY)</b> - 2022 Pele Awards (College)</p>
+                </div>
             </div>       
         </section>
 
