updated meta data

--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
     
 <head>
     <meta charset="UTF-8" />
-    <title>Creating Ha</title>
+    <title>Creating Ha | Contact</title>
 
     <!-- FAVICON -->
     <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
@@ -24,7 +24,7 @@
     <meta name="msapplication-TileImage" content="img/favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
-    <meta name="description" content="Creative Artworks of Lily Lam" />
+    <meta name="description" content="Contact Info for Creating Ha" />
    
     <!-- FOR MOBILE / SMALL SCREENS -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
