--- a/eye_metal.html
+++ b/eye_metal.html
@@ -24,7 +24,7 @@
     <meta name="msapplication-TileImage" content="img/favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
-    <meta name="description" content="Creative Artworks of Lily Lam" />
+    <meta name="description" content="Eye Artwork Printed on Aluminum" />
    
     <!-- FOR MOBILE / SMALL SCREENS -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
