--- a/gallery.html
+++ b/gallery.html
@@ -3,7 +3,7 @@
     
 <head>
     <meta charset="UTF-8" />
-    <title>Creating Ha</title>
+    <title>Creating Ha | Gallery</title>
 
     <!-- FAVICON -->
     <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
@@ -24,7 +24,7 @@
     <meta name="msapplication-TileImage" content="img/favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
-    <meta name="description" content="Creative Artworks of Lily Lam" />
+    <meta name="description" content="Gallery of Artworks by Lily Lam" />
    
     <!-- FOR MOBILE / SMALL SCREENS -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -34,9 +34,6 @@
 
     <!-- ADOBE FONTS -->
     <link rel="stylesheet" href="https://use.typekit.net/eap1orw.css">
-
-    <!-- SWIPER -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
 
     <!-- MAIN CSS -->
     <link rel="stylesheet" href="css/style.css" type="text/css" />
