--- a/gallery.html
+++ b/gallery.html
@@ -41,10 +41,10 @@
 
 <body>
    
-    <header class="site-header toggle-nav clear-header" data-navstate="closed">
+    <header class="site-header toggle-nav" data-navstate="closed">
         <div class="container">
             <div class="site-id">
-                <a class="logo-wrapper" href="index.html"><img src="img/creatingha_logo.svg" alt="Creating Ha Logo" width="220" height="55"></a>
+                <a href="index.html"><img src="img/creatingha_logo.svg" alt="Creating Ha Logo" width="220" height="55"></a>
                 <h1 class="hide-visually"><a href="index.html">Creating Ha</a></h1>
             </div>
             <nav class="site-nav">
