updated home, gallery, and product sub page

--- a/eye_metal.html
+++ b/eye_metal.html
@@ -66,45 +66,45 @@
         <section class="product">
             <div class="container">
                 <div class="row">
-                    <div class="column one-fifth">
+                    <div class="column one-ninth">
                         <img src="img/product/eye_metal.jpg" alt="Eye Metal Print" width="400" height="500" />
+
+                        <div class="row">
+                            <div class="column">
+                                <img src="img/product/eye_canvas.jpg" alt="Eye Canvas" width="400" height="500" />
+                            </div>
+                        </div>
+                        
+                        <div class="row">
+                            <div class="column">
+                                <img src="img/product/eye_card.jpg" alt="Eye Greeting Card" width="400" height="500" />
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="column">
+                                <img src="img/product/eye_matte.jpg" alt="Eye Matted Print" width="400" height="500" />
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="column">
+                                <img src="img/product/eye_wood.jpg" alt="Eye Wood Print" width="400" height="500" />
+                            </div>
+                        </div>
                     </div>
 
-                    <div class="column two-fifths">
+                    <div class="column four-ninths">
                         <img src="img/product/eye_metal.jpg" alt="Eye Metal Print" width="800" height="1000" />
                     </div>
 
-                    <div class="column two-fifths">
+                    <div class="column four-ninths">
                         <h2>Eye</h2>
                         <h5>MEDIUM</h5>
                         <h6>Aluminum</h6>
                         <h5>SIZE (INCHES)</h5>
-                        <h6>8" x 10"</h6><h3>$55 Wholesale</h3>
-                        <h6>16" x 20"</h6><h3>$110 Wholesale</h3>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="column one-fifth">
-                        <img src="img/product/eye_canvas.jpg" alt="Eye Canvas" width="400" height="500" />
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="column one-fifth">
-                        <img src="img/product/eye_card.jpg" alt="Eye Greeting Card" width="400" height="500" />
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="column one-fifth">
-                        <img src="img/product/eye_matte.jpg" alt="Eye Matted Print" width="400" height="500" />
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="column one-fifth">
-                        <img src="img/product/eye_wood.jpg" alt="Eye Wood Print" width="400" height="500" />
+                        <h6>8" x 10"</h6><h3>$55 Wholesale / $75 Retail</h3>
+                        <h6>16" x 20"</h6><h3>$110 Wholesale / $150 Retail</h3>
                     </div>
                 </div>
             </div>
