--- a/eye_canvas.html
+++ b/eye_canvas.html
@@ -24,7 +24,7 @@
     <meta name="msapplication-TileImage" content="img/favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
-    <meta name="description" content="Eye Artwork Printed on Aluminum" />
+    <meta name="description" content="Eye Artwork Printed on Canvas" />
    
     <!-- FOR MOBILE / SMALL SCREENS -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -95,21 +95,21 @@
                     </div>
 
                     <div class="column four-ninths no-stack">
-                        <img src="img/product/eye_metal.jpg" alt="Eye Metal Print" width="800" height="1000" />
+                        <img src="img/product/eye_canvas.jpg" alt="Eye Canvas" width="800" height="1000" />
                     </div>
 
                     <div class="column four-ninths stack">
                         <h2>Eye</h2>
                         <h5>MEDIUM</h5>
-                        <h6>Aluminum</h6>
+                        <h6>Canvas</h6>
                         <h5>SIZE (INCHES)</h5>
                         <div class="inline-wrapper">
-                            <h6>8" x 10"</h6>
-                            <div class="price">$55 Wholesale / $75 Retail</div>
+                            <h6>16" x 20"</h6>
+                            <div class="price">$200 Wholesale / $250 Retail</div>
                         </div>
                         <div class="inline-wrapper">
-                            <h6>16" x 20"</h6>
-                            <div class="price">$110 Wholesale / $150 Retail</div>
+                            <h6>24" x 30"</h6>
+                            <div class="price">$600 Wholesale / $750 Retail</div>
                     </div>
                 </div>
             </div>
