added forever love artwork sub pages

--- a/gallery.html
+++ b/gallery.html
@@ -74,7 +74,7 @@
                     </div>
 
                     <div class="column one-forth">
-                        <img src="img/foreverlove_sketch.jpg" alt="Forever Love Artwork" width="800" height="1000" />
+                        <a href="foreverlove_metal.html"><img src="img/foreverlove_sketch.jpg" alt="Forever Love Artwork" width="800" height="1000" /></a>
                     </div>
 
                     <div class="column one-forth">
