updated home page

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <link rel="stylesheet" href="css/style.css" type="text/css" />
 </head>
 
-<body>
+<body class="home">
    
     <header class="site-header toggle-nav clear-header" data-navstate="closed">
         <div class="container">
