--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
                     <div class="column one-half">
                         <h3 class="section-title">About</h3>
                         <h2 class="section-heading">FINDING JOY IN ART</h2>
-                        <p>In the humdrum of day-to-day life, Creating Ha is on a mission to uplift hearts and inspire souls in their pursuit of happiness through the creative artworks of Lily Lam and her line of quality designed goods. We are a lifestyle brand that encourages humanity to live their best lives filled with light, love, hope, peace, and joy through fun and whimsical products that break the monotony of daily living. Let’s harness the powerful benefits of finding joy in art and design!</p>
+                        <p>In the humdrum of day-to-day life, Creating Ha is on a mission to uplift hearts and inspire souls in their pursuit of happiness through the creative artworks of Lily Lam and her line of quality designed goods. We are a lifestyle brand that encourages humanity to live their best lives filled with light, love, hope, peace, and joy through fun and whimsical products that break the monotony of daily living. Let's harness the powerful benefits of finding joy in art and design!</p>
                     </div>    
                 </div>
             </div>
@@ -88,7 +88,7 @@
 
                     <div class="column one-half"> 
                         <h2 class="section-heading">THE ARTIST</h2>
-                        <p>Lily Lam is an artist and designer born in China and grew up in Honolulu, Hawai‘i where she currently resides. She began drawing at a young age and attended summer classes at the Honolulu Academy of Arts. Her passion for art led her to compete in numerous art contests growing up. She has won over 15 awards and was recognized by former mayors of Honolulu, Frank Fasi and Jeremy Harris, as well as by former governor of Hawai‘i, Ben Cayetano. She studied electrical engineering at Boston University and accounting at University of Hawai‘i at Mānoa. After practicing accounting for nearly ten years, Lily founded Creating Ha as a creative outlet to reconnect with her childhood passion. Aside from art, she enjoys Zumba, photography, and travel.</p>
+                        <p>Lily Lam is an artist and designer born in China and grew up in Honolulu, Hawai&lsquo;i where she currently resides. She began drawing at a young age and attended summer classes at the Honolulu Academy of Arts. Her passion for art led her to compete in numerous art contests growing up. She has won over 15 awards and was recognized by former mayors of Honolulu, Frank Fasi and Jeremy Harris, as well as by former governor of Hawai&lsquo;i, Ben Cayetano. She studied electrical engineering at Boston University and accounting at University of Hawai&lsquo;i at Mānoa. After practicing accounting for nearly ten years, Lily founded Creating Ha as a creative outlet to reconnect with her childhood passion. Aside from art, she enjoys Zumba, photography, and travel.</p>
                     </div>
                 </div>
             </div>       
@@ -101,7 +101,7 @@
                     <div class="awards-nav">
                         <nav>
                             <ul>
-                                <li><a href="#year1994">1994</a></li>
+                                <li><a class="selected" href="#year1994">1994</a></li>
                                 <li><a href="#year1995">1995</a></li>
                                 <li><a href="#year1996">1996</a></li>
                                 <li><a href="#year2021">2021</a></li>
@@ -116,7 +116,7 @@
                             <p><b>FIRST PLACE</b> - 1994 Sew a Lei for Memorial Day Poster Contest</p>
                             <p><b>BEST IN SHOW</b> - 2nd Annual Island Fresh Milk Art Contest</p>
                             <p><b>FIRST PLACE</b> - International Year of the Family Poster Contest</p>
-                            <p><b>FIRST PLACE</b> - 1994 Hawaii Magazine Children’s Art Contest</p>  
+                            <p><b>FIRST PLACE</b> - 1994 Hawaii Magazine Children's Art Contest</p>  
                             <p><b>HONORABLE MENTION</b> - 1994 Hawaii State Science &amp; Engineering Fair Poster &amp; Cover Contest</p>
                         </div>
 
@@ -151,7 +151,6 @@
                 </div>
             </div>       
         </section>
-
     </main>
 
     <footer class="site-footer">
