added closing div to artwork sub pages

--- a/eye_canvas.html
+++ b/eye_canvas.html
@@ -110,6 +110,7 @@
                         <div class="inline-wrapper">
                             <h6>24" x 30"</h6>
                             <div class="price">$600 Wholesale / $750 Retail</div>
+                        </div>
                     </div>
                 </div>
             </div>
