--- a/foreverlove_matte.html
+++ b/foreverlove_matte.html
@@ -110,6 +110,7 @@
                         <div class="inline-wrapper">
                             <h6>11" x 14"</h6>
                             <div class="price">$55 Wholesale / $75 Retail</div>
+                        </div>
                     </div>
                 </div>
             </div>
