--- a/hands_canvas.html
+++ b/hands_canvas.html
@@ -110,6 +110,7 @@
                         <div class="inline-wrapper">
                             <h6>24" x 30"</h6>
                             <div class="price">$600 Wholesale / $750 Retail</div>
+                        </div>
                     </div>
                 </div>
             </div>
