--- a/portrait1_metal.html
+++ b/portrait1_metal.html
@@ -110,6 +110,7 @@
                         <div class="inline-wrapper">
                             <h6>16" x 20"</h6>
                             <div class="price">$110 Wholesale / $150 Retail</div>
+                        </div>
                     </div>
                 </div>
             </div>
