--- a/portrait1_wood.html
+++ b/portrait1_wood.html
@@ -110,6 +110,7 @@
                         <div class="inline-wrapper">
                             <h6>11" x 14"</h6>
                             <div class="price">$95 Wholesale / $125 Retail</div>
+                        </div>
                     </div>
                 </div>
             </div>
