updated gallery images to scale up on hover

--- a/gallery.html
+++ b/gallery.html
@@ -69,37 +69,37 @@
                 <h2 class="section-heading">CHOOSE YOUR ARTWORK ON YOUR PREFERRED MEDIUM</h2>
 
                 <div class="row">
-                    <div class="column one-forth">
+                    <div class="column one-forth scale">
                         <a href="eye_metal.html"><img src="img/eye_sketch.jpg" alt="Eye Artwork" width="800" height="1000" /></a>
                     </div>
 
-                    <div class="column one-forth">
+                    <div class="column one-forth scale">
                         <a href="foreverlove_metal.html"><img src="img/foreverlove_sketch.jpg" alt="Forever Love Artwork" width="800" height="1000" /></a>
                     </div>
 
-                    <div class="column one-forth">
+                    <div class="column one-forth scale">
                         <a href="hands_metal.html"><img src="img/hands_sketch.jpg" alt="Hands Artwork" width="800" height="1000" /></a>
                     </div>
                     
-                    <div class="column one-forth">
+                    <div class="column one-forth scale">
                         <a href="flower_metal.html"><img src="img/flower_sketch.jpg" alt="Flower Artwork" width="800" height="1000" /></a>
                     </div>   
                 </div>
 
                 <div class="row">
-                    <div class="column one-forth">
+                    <div class="column one-forth scale">
                         <a href="portrait1_metal.html"><img src="img/portrait1_sketch.jpg" alt="Portrait 1 Artwork" width="800" height="1000" /></a>
                     </div>
 
-                    <div class="column one-forth">
+                    <div class="column one-forth scale">
                         <a href="kiss_metal.html"><img src="img/kiss_sketch.jpg" alt="Kiss Artwork" width="800" height="1000" /></a>
                     </div>
 
-                    <div class="column one-forth">
+                    <div class="column one-forth scale">
                         <a href="glance_metal.html"><img src="img/glance_sketch.jpg" alt="Glance Artwork" width="800" height="1000" /></a>
                     </div>
                     
-                    <div class="column one-forth">
+                    <div class="column one-forth scale">
                         <a href="romance_metal.html"><img src="img/romance_sketch.jpg" alt="Romance Artwork" width="800" height="1000" /></a>
                     </div>   
                 </div>
