--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,7 @@
                 
                 <div class="row">
                     <div class="column one-half contact-info">
-                        <p>I hope you enjoy viewing some of my artworks! Feel free to reach out if you have any questions or to inquire about custom sizes. If you are a retailer interested in carrying our products, please fill out and submit the <a href="#">Retailer Order Form</a>. I will get back to you as soon as I can.</p>
+                        <p>I hope you enjoy viewing some of my artworks! Feel free to reach out if you have any questions or to inquire about custom sizes. If you are a retailer interested in carrying our products, please email lily@creatingha.com. I will get back to you as soon as I can.</p>
         
                         <img src="img/contact.jpg" alt="Contact Info" width="1000" height="743" />
                     </div>
